# laughing-engine

./: .gitignore  FileProva001.py  Prova_2026_05_20  leggimi_nc.md  main.py  nuovo_file.txt  prova_DF.py  pyproject.toml  readme.md  terzo_file.txt  test_new_file
PROGETTO_HR/: pyproject.toml
PROGETTO_HR/data/raw/: dipendenti.csv  presenze.csv
PROGETTO_HR/src/: etl.py
PROGETTO_HR/src/etl_project.egg-info/: PKG-INFO  SOURCES.txt
src/: etl.py  etl_old_bck.py
src/stipendi_etl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
