[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name = "stipendi_etl"
version = "0.0.1"
description = "Esercizio ETL di base per la gestione stipendi"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    {name = "GRUPPO_4", email = "example@example.com"},
]
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]