[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_project"
version = "0.1.0"
description = "Esercizio per la gestione stipendi HR"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]